--- a/style.css
+++ b/style.css
@@ -1,46 +1,53 @@
 :root {
-    --txt-copy: 1.2rem;
+    --txt-copy: 1.1rem;
     --txt-small: 1rem;
-    --title-copy: calc(.8vw + 1rem);
+    --title-copy: calc(.5vw + 1rem);
     --title-main: calc(2.5vw + 1rem);
 
     --txt-color: #1d1d1d;
     --bg-color: #fff;
+    --extra-color: #0fd395;
 
     --main-pm: 2rem;
     --small-pm: 1rem;
 }
 
 body {
+    max-width: 1512px;
+    margin: 0 auto;
     font-family: sculpin, sans-serif;
     font-weight: 400;
     font-size: var(--txt-copy);
     color: var(--txt-color);
+    position: relative;
     overflow-x: hidden;
 }
 
 p {
-    line-height: 1.4;
+    font-family: sculpin, sans-serif;
+    font-weight: 500;
+    line-height: 1.5;
 }
 
-h3 {
-    font-size: var(--title-copy);
-    font-weight: 600;
-    text-transform: uppercase;
+h1 {
+    font-style: italic;
 }
 
 h1,
 h2,
 nav li,
-footer li {
+footer li,
+.main--list {
     font-size: var(--title-main);
-    font-weight: 700;
+    font-weight: 500;
     line-height: 1;
     text-transform: uppercase;
 }
 
-h1 {
-    font-style: italic;
+h3 {
+    font-size: var(--title-copy);
+    font-weight: 500;
+    text-transform: uppercase;
 }
 
 header,
@@ -55,6 +62,7 @@ header {
 }
 
 footer {
+    justify-content: flex-end;
     align-items: flex-end;
 }
 
@@ -73,12 +81,22 @@ main {
     width: 50%;
 }
 
-/* .menu-btn {
-    font-size: var(--title-main);
-    font-weight: 700;
-    line-height: 1;
-    text-transform: uppercase;
-} */
+.nav--pages {
+    position: fixed;
+    top: var(--main-pm);
+    right: var(--main-pm);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.logo-btn img {
+    max-width: calc(2vw + 1rem);
+}
+
+.close-btn img {
+    max-width: var(--title-copy);
+}
 
 .menu {
     width: 100%;
@@ -89,22 +107,10 @@ main {
     min-width: 40%;
 }
 
-/* .menu--trigger {
-    cursor: pointer;
-}
-
-.menu--projects {
-    display: none;
-    opacity: 0;
-}
-
-.menu--projects.open {
-    display: block;
-    opacity: 1;
-} */
-
-.close-btn img {
-    max-width: var(--title-main);
+.logo {
+    position: absolute;
+    bottom: var(--main-pm);
+    left: var(--main-pm);
 }
 
 .logo h1 {
@@ -121,10 +127,17 @@ main {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     position: sticky;
     top: 0;
     padding: var(--main-pm);
+}
+
+.main--list {
+    padding-right: 6rem;
+}
+
+.main--image {
+    max-width: calc(50vw - 8rem);
 }
 
 .main--image img {
@@ -133,7 +146,7 @@ main {
 
 .col--content {
     padding-top: 0;
-    padding-right: var(--main-pm);
+    padding-right: 6rem;
     padding-bottom: var(--main-pm);
     padding-left: var(--main-pm);
 }
@@ -147,16 +160,21 @@ main {
 }
 
 .content--block p {
-    margin-bottom: var(--main-pm);
+    margin-bottom: var(--small-pm);
 }
 
-.--info {
-    font-size: var(--txt-small);
-    font-weight: 500;
+.content--block p:last-child {
+    margin-bottom: 0;
 }
 
 .--info p {
+    font-size: var(--txt-small);
+    font-weight: 300;
     margin-bottom: var(--small-pm);
+}
+
+.--info p:last-child {
+    margin-bottom: 0;
 }
 
 .--sponsor {
@@ -169,13 +187,7 @@ main {
 
 .--sponsor img {
     max-width: 120px;
-    height: fit-content;
-}
-
-.main--list {
-    font-size: var(--title-main);
-    font-weight: 700;
-    text-transform: uppercase;
+    /* height: fit-content; */
 }
 
 .button--open {
@@ -192,13 +204,33 @@ main {
     opacity: 1;
 }
 
+@media screen and (max-width: 900px) {
+    .main--pages {
+        flex-direction: column;
+    }
+
+    .main--pages section {
+        width: 100%;
+    }
+
+    .col--nav {
+        height: auto;
+        flex-direction: column;
+        position: static;
+        padding-bottom: 0;
+        gap: 1rem;
+    }
+
+    .main--image {
+        max-width: 50vw;
+    }
+}
 
 @media screen and (max-width: 600px) {
     :root {
         --txt-copy: .8rem;
         --txt-small: .8rem;
         --main-pm: 1rem;
-        /* --small-pm: 1rem; */
     }
 
     header {
@@ -231,27 +263,22 @@ main {
         margin-top: 2rem;
     }
 
-    .close-btn {
-        position: absolute;
-        right: 1rem;
-        top: 1rem;
-    }
-
     .main--home {
         height: auto;
-    }
-
-    .main--list,
-    .main--image,
-    .main--contact {
-        order: 2;
     }
 
     .main--list {
         display: flex;
         flex-wrap: wrap;
         column-gap: 1rem;
-        justify-content: center;
+    }
+
+    .main--image {
+        max-width: 100vw;
+    }
+
+    .logo {
+        position: static;
     }
 
     .logo h1 {
@@ -267,24 +294,12 @@ main {
         width: 100%;
     }
 
-    .main--pages {
-        flex-direction: column;
-    }
-
-    .main--pages section {
-        width: 100%;
-    }
-
-    .col--nav {
-        height: auto;
-        flex-direction: column;
-        position: static;
-        padding-bottom: 0;
-        gap: 1rem;
+    .col--content,
+    .main--list {
+        padding-right: 4rem;
     }
 
     .--sponsor img {
         max-width: 80px;
-        height: fit-content;
     }
 }
