--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@
 
     --txt-color: #1d1d1d;
     --bg-color: #fff;
-    --extra-color: #0fd395;
-
+    --extra-color: #fffe1e;
+    /* 187155 */
     --main-pm: 2rem;
     --small-pm: 1rem;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
@@ -23,11 +27,84 @@ body {
     overflow-x: hidden;
 }
 
+a {
+    position: relative;
+    text-decoration: underline;
+}
+
+a::after {
+    content: "";
+    display: inline;
+    background: var(--extra-color);
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: right;
+    z-index: 1;
+    transition: transform .2s ease-in-out;
+}
+
+a:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+h2 a,
+h3 a,
+header a,
+footer a,
+.nav--btn a,
+.content--list a {
+    text-decoration: none;
+    transition: color .5s ease-in-out;
+}
+
+h2 a::after,
+h3 a::after,
+header a::after,
+footer a::after,
+.nav--btn a::after,
+.content--list a::after {
+    content: none;
+}
+
+h2 a:hover,
+h3 a:hover,
+header a:hover,
+footer a:hover,
+.nav--btn a:hover,
+.content--list a:hover {
+    color: var(--extra-color);
+}
+
 p {
     font-family: sculpin, sans-serif;
     font-weight: 500;
     line-height: 1.5;
 }
+
+p em {
+    font-style: italic;
+}
+
+p strong {
+    font-weight: 900;
+}
+
+p em strong,
+p strong em {
+    font-weight: 900;
+    font-style: italic;
+}
+
+p mark {
+    color: var(--bg-color);
+    background: var(--txt-color);
+}
+
 
 h1 {
     font-style: italic;
@@ -36,8 +113,7 @@ h1 {
 h1,
 h2,
 nav li,
-footer li,
-.main--list {
+footer li {
     font-size: var(--title-main);
     font-weight: 500;
     line-height: 1;
@@ -81,7 +157,7 @@ main {
     width: 50%;
 }
 
-.nav--pages {
+.nav--btn {
     position: fixed;
     top: var(--main-pm);
     right: var(--main-pm);
@@ -90,12 +166,12 @@ main {
     align-items: center;
 }
 
-.logo-btn img {
-    max-width: calc(2vw + 1rem);
+.btn--logo img {
+    max-width: calc(3vw + 1rem);
 }
 
-.close-btn img {
-    max-width: var(--title-copy);
+.btn--close img {
+    max-width: calc(3vw + 1rem);
 }
 
 .menu {
@@ -132,23 +208,19 @@ main {
     padding: var(--main-pm);
 }
 
-.main--list {
-    padding-right: 6rem;
-}
-
-.main--image {
-    max-width: calc(50vw - 8rem);
-}
-
-.main--image img {
-    width: 100%;
-}
-
 .col--content {
     padding-top: 0;
     padding-right: 6rem;
     padding-bottom: var(--main-pm);
     padding-left: var(--main-pm);
+}
+
+.content--image {
+    max-width: calc(50vw - 8rem);
+}
+
+.content--image img {
+    width: 100%;
 }
 
 .content--block {
@@ -190,7 +262,7 @@ main {
     /* height: fit-content; */
 }
 
-.button--open {
+.btn--open {
     cursor: pointer;
 }
 
@@ -202,6 +274,10 @@ main {
 .content--open.open {
     display: block;
     opacity: 1;
+}
+
+.active {
+    text-decoration: underline;
 }
 
 @media screen and (max-width: 900px) {
@@ -221,7 +297,7 @@ main {
         gap: 1rem;
     }
 
-    .main--image {
+    .content--image {
         max-width: 50vw;
     }
 }
@@ -267,13 +343,13 @@ main {
         height: auto;
     }
 
-    .main--list {
+    .content--nav {
         display: flex;
         flex-wrap: wrap;
         column-gap: 1rem;
     }
 
-    .main--image {
+    .content--image {
         max-width: 100vw;
     }
 
@@ -295,7 +371,7 @@ main {
     }
 
     .col--content,
-    .main--list {
+    .content--nav {
         padding-right: 4rem;
     }
 
