--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ a {
     text-decoration: underline;
 }
 
+a:visited {
+    color: var(--txt-color);
+}
+
 a::after {
     content: "";
     display: inline;
@@ -161,6 +165,7 @@ main {
     position: fixed;
     top: var(--main-pm);
     right: var(--main-pm);
+    z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -259,7 +264,6 @@ main {
 
 .--sponsor img {
     max-width: 120px;
-    /* height: fit-content; */
 }
 
 .btn--open {
@@ -343,10 +347,27 @@ main {
         height: auto;
     }
 
+    .col--nav {
+        position: relative;
+    }
+
     .content--nav {
         display: flex;
         flex-wrap: wrap;
         column-gap: 1rem;
+    }
+
+    #event--nav {
+        background-color: var(--bg-color);
+        padding-top: var(--main-pm);
+        padding-bottom: var(--main-pm);
+        position: fixed;
+        top: 0;
+        z-index: 1;
+    }
+
+    #event--list {
+        padding-top: 25%;
     }
 
     .content--image {
