--- a/style.css
+++ b/style.css
@@ -176,7 +176,13 @@ main {
 }
 
 .btn--close img {
-    max-width: calc(3vw + 1rem);
+    /* max-width: calc(3vw + 1rem); */
+    max-width: calc(2vw + 1rem);
+}
+
+.btn--menu {
+    line-height: 1;
+    text-align: center;
 }
 
 .menu {
@@ -211,6 +217,7 @@ main {
     position: sticky;
     top: 0;
     padding: var(--main-pm);
+    overflow-y: scroll;
 }
 
 .col--content {
@@ -220,12 +227,22 @@ main {
     padding-left: var(--main-pm);
 }
 
-.content--image {
+/* .content--image {
     max-width: calc(50vw - 8rem);
+} */
+
+.content--image {
+    max-width: calc(50vw - 6rem);
+    margin: 0 auto;
 }
 
 .content--image img {
     width: 100%;
+    padding-bottom: var(--main-pm);
+}
+
+.content--image img:last-child {
+    padding-bottom: 0;
 }
 
 .content--block {
@@ -242,6 +259,18 @@ main {
 
 .content--block p:last-child {
     margin-bottom: 0;
+}
+
+.nav--link {
+    margin-bottom: .5rem;
+}
+
+.--scroll {
+    overflow-y: scroll;
+}
+
+.--scroll::-webkit-scrollbar {
+    display: none;
 }
 
 .--info p {
@@ -280,8 +309,8 @@ main {
     opacity: 1;
 }
 
-.active {
-    text-decoration: underline;
+.active a {
+    color: var(--extra-color);
 }
 
 @media screen and (max-width: 900px) {
@@ -358,6 +387,12 @@ main {
     }
 
     #event--nav {
+        width: calc(100% - 4.5rem);
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        column-gap: 1rem;
+        overflow-x: scroll;
         background-color: var(--bg-color);
         padding-top: var(--main-pm);
         padding-bottom: var(--main-pm);
@@ -366,8 +401,16 @@ main {
         z-index: 1;
     }
 
+    .nav--link {
+        margin-bottom: 0;
+    }
+
+    #event--nav::-webkit-scrollbar {
+        display: none;
+    }
+
     #event--list {
-        padding-top: 25%;
+        padding-top: 2rem;
     }
 
     .content--image {
