--- a/base.css
+++ b/base.css
@@ -92,7 +92,7 @@ video {
     padding: 0;
     border: 0;
     font: inherit;
-    vertical-align: baseline
+    vertical-align: baseline;
 }
 
 article,
@@ -106,17 +106,17 @@ hgroup,
 menu,
 nav,
 section {
-    display: block
+    display: block;
 }
 
 ol,
 ul {
-    list-style: none
+    list-style: none;
 }
 
 blockquote,
 q {
-    quotes: none
+    quotes: none;
 }
 
 blockquote:after,
@@ -124,41 +124,41 @@ blockquote:before,
 q:after,
 q:before {
     content: "";
-    content: none
+    content: none;
 }
 
 table {
     border-collapse: collapse;
-    border-spacing: 0
+    border-spacing: 0;
 }
 
 html {
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 :after,
 :before {
-    box-sizing: inherit
+    box-sizing: inherit;
 }
 
 a,
 del,
 ins {
-    text-decoration: none
+    text-decoration: none;
 }
 
 a {
-    color: inherit
+    color: inherit;
 }
 
 button,
 label {
-    cursor: pointer
+    cursor: pointer;
 }
 
 button,
 input {
-    outline: 0
+    outline: 0;
 }
 
 em {
