--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --bg-color: #fff;
     --extra-color: #fffe1e;
     /* 187155 */
+    --large-pm: 4rem;
     --main-pm: 2rem;
     --small-pm: 1rem;
 }
@@ -31,6 +32,7 @@ a {
     position: relative;
     text-decoration: underline;
     color: var(--txt-color);
+    white-space: nowrap;
 }
 
 a:visited,
@@ -60,18 +62,17 @@ a:hover::after {
 
 h2 a,
 h3 a,
-h4 a,
 header a,
 footer a,
 .nav--btn a,
 .content--list a {
     text-decoration: none;
+    white-space: unset;
     transition: color .5s ease-in-out;
 }
 
 h2 a::after,
 h3 a::after,
-h4 a::after,
 header a::after,
 footer a::after,
 .nav--btn a::after,
@@ -81,7 +82,6 @@ footer a::after,
 
 h2 a:hover,
 h3 a:hover,
-h4 a:hover,
 header a:hover,
 footer a:hover,
 .nav--btn a:hover,
@@ -138,7 +138,6 @@ h3 {
 h4 {
     font-size: var(--txt-small);
     font-weight: 300;
-    margin-bottom: var(--small-pm);
     line-height: 1.5;
 }
 
@@ -188,7 +187,6 @@ main {
 }
 
 .btn--close img {
-    /* max-width: calc(3vw + 1rem); */
     max-width: calc(2vw + 1rem);
 }
 
@@ -239,13 +237,8 @@ main {
     padding-left: var(--main-pm);
 }
 
-/* .content--image {
-    max-width: calc(50vw - 8rem);
-} */
-
 .content--image {
     max-width: calc(50vw - 6rem);
-    margin: 0 auto;
 }
 
 .content--image img {
@@ -255,6 +248,10 @@ main {
 
 .content--image img:last-child {
     padding-bottom: 0;
+}
+
+.content--wrapper {
+    margin-top: var(--large-pm);
 }
 
 .content--block {
@@ -285,15 +282,9 @@ main {
     display: none;
 }
 
-.--info p {
-    font-size: var(--txt-small);
-    font-weight: 300;
-    margin-bottom: var(--small-pm);
-}
-
-.--info p:last-child {
-    margin-bottom: 0;
-}
+/* .--info {
+    margin-top: var(--large-pm);
+} */
 
 .--sponsor {
     display: flex;
@@ -322,7 +313,6 @@ main {
 
 .active a {
     color: var(--extra-color);
-    /* text-decoration: underline var(--extra-color); */
 }
 
 @media screen and (max-width: 900px) {
@@ -338,12 +328,15 @@ main {
         height: auto;
         flex-direction: column;
         position: static;
-        padding-bottom: 0;
+        padding-top: 0;
+        padding-right: 6rem;
+        padding-bottom: var(--main-pm);
+        padding-left: var(--main-pm);
         gap: 1rem;
     }
 
     .content--image {
-        max-width: 50vw;
+        max-width: 100%;
     }
 }
 
@@ -351,6 +344,7 @@ main {
     :root {
         --txt-copy: .8rem;
         --txt-small: .8rem;
+        --large-pm: 3rem;
         --main-pm: 1rem;
     }
 
@@ -390,6 +384,7 @@ main {
 
     .col--nav {
         position: relative;
+        padding: var(--main-pm);
     }
 
     .content--nav {
