--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a:focus {
 a::after {
     content: "";
     display: inline;
-    background: var(--extra-color);
+    background: var(--acc-color);
     width: 100%;
     height: 4px;
     position: absolute;
@@ -152,7 +152,7 @@ canvas {
     height: 100%;
     vertical-align: bottom;
     z-index: 1;
-    /* mix-blend-mode: multiply; */
+    /* filter: blur(12px); */
 }
 
 main {
